--- a/Maximalist.html
+++ b/Maximalist.html
@@ -114,24 +114,26 @@ How to create a maximalist colour scheme:  </h3>
 </p>
 
   </div>
-        <!-- Footer Section -->
 
-        <div class="container-fluid" >
-          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <div class="col-md-4 d-flex align-items-center">
-              <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-                <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-              </a>
-              <span class="mb-3 mb-md-0 text-body-secondary">© 2023 DesignLed Ltd</span>
-            </div>
-  
-            <div class="nav col-md-2 justify-content-between">
-              <i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i>
-              <i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i>
-              <i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i>
-              <i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i>
-            </div>
-          </footer>
-        </div>
-  </body>
+ <!-- Footer Section -->
+
+ <div class="container-fluid" >
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 DesignLed Ltd</span>
+    </div>
+
+    <div class="nav col-md-2 justify-content-between">
+      <a href="https://www.pinterest.ie/"><i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i></a>
+      <a href="https://www.facebook.com/"><i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i></a>
+      <a href="https://www.instagram.com/"><i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i></a>
+      <a href="mailto: lisa@designled.io"><i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i></a>
+    </div>
+  </footer>
+</div>
+
+</body>
 </html>
