--- a/colour-theory.html
+++ b/colour-theory.html
@@ -163,7 +163,7 @@
 </div>
 
 
-    <!-- FOOTER SECTION -->
+    <!-- Footer Section -->
 
     <div class="container-fluid" >
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
@@ -175,14 +175,13 @@
         </div>
 
         <div class="nav col-md-2 justify-content-between">
-          <i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i>
-          <i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i>
-          <i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i>
-          <i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i>
+          <a href="https://www.pinterest.ie/"><i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/"><i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/"><i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i></a>
+          <a href="mailto: lisa@designled.io"><i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i></a>
         </div>
       </footer>
     </div>
 
-        
 </body>
 </html>
