--- a/index.html
+++ b/index.html
@@ -128,25 +128,25 @@
 <p>Find the colours you need in your home so you can start creating your dream spaces.</p>
 </div>
 
-    <!-- FOOTER SECTION -->
+   <!-- Footer Section -->
 
-    <div class="container-fluid" >
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-          <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-            </a>
-            <span class="mb-3 mb-md-0 text-body-secondary">© 2023 DesignLed Ltd</span>
-          </div>
-
-          <div class="nav col-md-2 justify-content-between">
-            <i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i>
-            <i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i>
-            <i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i>
-            <i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i>
-          </div>
-        </footer>
+   <div class="container-fluid" >
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 DesignLed Ltd</span>
       </div>
 
-  </body>
+      <div class="nav col-md-2 justify-content-between">
+        <a href="https://www.pinterest.ie/"><i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/"><i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/"><i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i></a>
+        <a href="mailto: lisa@designled.io"><i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i></a>
+      </div>
+    </footer>
+  </div>
+
+</body>
 </html>
