--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -51,10 +51,7 @@
     <div class="container-fluid navbar-fixed-top">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="d-flex flex-grow-1">
-          <span class="w-100 d-lg-none d-block"
-            ><!-- hidden spacer to center brand on mobile --></span
-          >
-          <a class="navbar-brand d-none d-inline-block" href="#">
+          <a class="navbar-brand d-none d-inline-block">
             <img
               src="assets/site-images/Logo.webp"
               alt="Logo for Colour Theory"
@@ -77,7 +74,7 @@
           class="menu collapse navbar-collapse flex-grow-1 text-right"
           id="myNavbar"
         >
-          <ul class="navbar-nav ml-auto flex-nowrap">
+          <ul class="navbar-nav ml-auto flex-nowrap flex-row">
             <li class="nav-item">
               <a href="index.html" class="nav-link m-2 menu-item">Home</a>
             </li>
