--- a/index.html
+++ b/index.html
@@ -42,45 +42,42 @@
   <body class="wrapper">
     <!-- Navbar base code from Bootstrap -->
 
-    <!-- Nav bar section-->
-    <div class="container-fluid navbar-fixed-top">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="d-flex flex-grow-1">
-          <span class="w-100 d-lg-none d-block"
-            ><!-- hidden spacer to center brand on mobile --></span
-          >
-          <a class="navbar-brand d-none d-inline-block" href="#">
-            <img
-              src="assets/site-images/Logo.webp"
-              alt="Logo for Colour Theory"
-              style="width: 125px"
-            />
-          </a>
-          <div class="w-100 text-right">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#myNavbar"
-              aria-label="Collapsible menu"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
-        </div>
-        <div
-          class="menu collapse navbar-collapse flex-grow-1 text-right"
-          id="myNavbar"
-        >
-          <ul class="navbar-nav ml-auto flex-nowrap">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link m-2 menu-item">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="colour-theory.html" class="nav-link m-2 menu-item"
-                >What is Colour Theory?</a
+      <!-- Nav bar section-->
+      <div class="container-fluid navbar-fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="d-flex flex-grow-1">
+            <a class="navbar-brand d-none d-inline-block">
+              <img
+                src="assets/site-images/Logo.webp"
+                alt="Logo for Colour Theory"
+                style="width: 125px"
+              />
+            </a>
+            <div class="w-100 text-right">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#myNavbar"
+                aria-label="Collapsible menu"
               >
-            </li>
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+          </div>
+          <div
+            class="menu collapse navbar-collapse flex-grow-1 text-right"
+            id="myNavbar"
+          >
+            <ul class="navbar-nav ml-auto flex-nowrap flex-row">
+              <li class="nav-item">
+                <a href="index.html" class="nav-link m-2 menu-item">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="colour-theory.html" class="nav-link m-2 menu-item"
+                  >What is Colour Theory?</a
+                >
+              </li>
 
             <!-- Dropdown menu section -->
             <li class="nav-item dropdown">
